src/tests/snapshots/nyx__tests__window_opening__check_target_size@omT-dwP0.25-dhF500-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-maximized true\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 500, bounds: 1280 × 720, states: []
size: 1280 × 500, bounds: 1280 × 720, states: [Activated]
